default/objects/White_Space_Amount_Type__c/White_Space_Amount_Type__c.object-meta.xml
<CustomObject>
    <label>Cross-Sell Amount Type</label>
    <nameField>
        <label>Cross-Sell Amount Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cross-Sell Amount Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>