default/objects/White_Space_Amount_Type__c/fields/Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>Abbreviation__c</fullName>
    <label>Abbreviation</label>
    <length>32</length>
    <type>Text</type>
</CustomField>