default/objects/White_Space_Amount_Type__c/fields/Color_RGB__c.field-meta.xml
<CustomField>
    <fullName>Color_RGB__c</fullName>
    <description>The color RGB value in the form of #RRGGBB</description>
    <inlineHelpText>The color RGB value in the form of #RRGGBB (Red Green Blue Values)</inlineHelpText>
    <label>Color RGB</label>
    <length>7</length>
    <required>true</required>
    <type>Text</type>
</CustomField>