default/objects/White_Space_Amount_Type__c/fields/Display_Type__c.field-meta.xml
<CustomField>
    <fullName>Display_Type__c</fullName>
    <description>The way the data is displayed for this type</description>
    <label>Display Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Field_Types</valueSetName>
    </valueSet>
</CustomField>